--- a/purchase.html
+++ b/purchase.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
 </body>
 </html>
