--- a/purchase.html
+++ b/purchase.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+ <nav class="navbar navbar-default navbar-transparent navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+
 
 </body>
 </html>
