--- a/purchase.html
+++ b/purchase.html
@@ -8,6 +8,8 @@
  <nav class="navbar navbar-default navbar-transparent navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
+                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
 
 
 </body>
