<a tag to scroll back up to the page

--- a/purchase.html
+++ b/purchase.html
@@ -14,6 +14,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Logo Here</a>
+            </div>
 
 
 </body>
