Collect the nav links, forms, and other content for toggling

--- a/purchase.html
+++ b/purchase.html
@@ -16,6 +16,10 @@
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">Logo Here</a>
             </div>
+             <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav navbar-right">
+
 
 
 </body>
