--- a/purchase.html
+++ b/purchase.html
@@ -34,6 +34,10 @@
                     </li>
                 </ul>
             </div>
+             <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
 
 
