--- a/purchase.html
+++ b/purchase.html
@@ -38,6 +38,13 @@
         </div>
         <!-- /.container -->
     </nav>
+ <!-- Intro Section -->
+    <section id="intro" class="intro-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>First header</h1>
+                    <p>Rental Agency</p>
 
 
 
