--- a/purchase.html
+++ b/purchase.html
@@ -45,6 +45,12 @@
                 <div class="col-lg-12">
                     <h1>First header</h1>
                     <p>Rental Agency</p>
+                    <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
