Added header and a sidebar to display inventory

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
 	          </ul>
         	</nav>
     	</header>
+    <div id = "main">
+			<section>
+		        <article>
+		            <header>
+		                <h3>Description</h3>
+		            </header>
+		            <p>Lorum ipsum.</p>
+		        </article>
+	    	</section>
+	    	<aside>
+	        <h3>Inventory</h3>
+	        <p>Lorum ipsum.</p>
+	    	</aside>
+    	</div>
+    <footer>
+        <p>Lorum ipsum.</p>
+    </footer>
 
 </body>
 </html>
