Set my color scheme

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     <footer>
         <p>Lorum ipsum.</p>
     </footer>
-
+<link rel="stylesheet" type="text/css" href="custom.css">
 </body>
 </html>
