static page done

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
 
 <div id = "container">
-		<header id = "bannerimage">
-            <img class="resize" src="ScooterBanner.png"/>
 
-        </header>
+		<header>
+    <figure>
+        <img src="logo.png" class="center-block img-responsive" alt="Logo">
+
+    </figure>
 
                     <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -35,11 +37,13 @@
   </div>
 </nav>
     	</header>
+
     <div id = "main">
 			<section>
 		        <article>
 		            <header>
 		                <h3>Description</h3>
+
 		            </header>
 		            <p>Lorum ipsum.</p>
 		        </article>
