--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Title</title>
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="custom.css">
+
 
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -37,25 +39,54 @@
   </div>
 </nav>
     	</header>
+    <h1>Inventory</h1>
+    <!-- / .carousel -->
 
     <div id = "main">
-			<section>
-		        <article>
-		            <header>
-		                <h3>Description</h3>
+   <div class="carousel_wrapper">
+  <div class="carousel">
+    <div class="slide one">
+      <img src="beds.jpg" />
+    </div>
+    <div class="slide two">
+      <img src="boot.jpg" />
+    </div>
+    <div class="slide three">
+      <img src="crutches.jpg" />
+    </div>
+    <div class="slide four">
+      <img src="mri.jpg" />
+    </div>
+    <div class="slide five">
+      <img src="scooters.jpg" />
+    </div>
+    <div class="slide six">
+      <img src="stretcher.jpg" />
+    </div>
+    <div class="slide seven">
+      <img src="wheelchair.jpg" />
+    </div>
+    <div class="slide eight">
+      <img src="surgical_tools.jpg" />
+    </div>
+    <div class="slide nine">
+      <img src="x-ray.jpg" />
+    </div>
+  </div>
+   </div>
+<div id="description">
+       <section>
+           <header>
+               <ml>><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></br>
+                   <h2>Welcome To Guz's Medical Equipment Rental Agency!</h2>
+                   <div><p>Guz's Medical Equipment Rental Agency is a Business where a Customer can rent any medical equipment for their medical business.<br> Click any item in inventory to purchase!</p></div>
+               </div>
+           </header>
+       </section>
+</div>
 
-		            </header>
-		            <p>Lorum ipsum.</p>
-		        </article>
-	    	</section>
-	    	<aside>
-	        <h3>Inventory</h3>
-	        <p>Lorum ipsum.</p>
-	    	</aside>
-    	</div>
-    <footer>
-        <p>Lorum ipsum.</p>
-    </footer>
-<link rel="stylesheet" type="text/css" href="custom.css">
+
+
+
 </body>
 </html>
