--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Guz's Medical</title>
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="custom.css">
@@ -31,11 +31,9 @@
       <a class="navbar-brand" href="#">Guz's Medical Equipment Rental Agency</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
+      <li class="active"><a href="index.html">Home</a></li>
+      <li><a href="purchase.html">Rent</a></li>
+
   </div>
 </nav>
     	</header>
@@ -47,37 +45,46 @@
   <div class="carousel">
     <div class="slide one">
       <img src="beds.jpg" />
+        <a href="purchase.html">
     </div>
     <div class="slide two">
       <img src="boot.jpg" />
+        <a href="purchase.html">
     </div>
     <div class="slide three">
       <img src="crutches.jpg" />
+        <a href="purchase.html">
     </div>
     <div class="slide four">
       <img src="mri.jpg" />
+        <a href="purchase.html">
     </div>
     <div class="slide five">
       <img src="scooters.jpg" />
+        <a href="purchase.html">
     </div>
     <div class="slide six">
       <img src="stretcher.jpg" />
+        <a href="purchase.html">
     </div>
     <div class="slide seven">
       <img src="wheelchair.jpg" />
+        <a href="purchase.html">
     </div>
     <div class="slide eight">
       <img src="surgical_tools.jpg" />
+        <a href="purchase.html">
     </div>
     <div class="slide nine">
       <img src="x-ray.jpg" />
+        <a href="purchase.html">
     </div>
   </div>
    </div>
 <div id="description">
        <section>
            <header>
-               <ml>><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></br>
+               <ml><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></br>
                    <h2>Welcome To Guz's Medical Equipment Rental Agency!</h2>
                    <div><p>Guz's Medical Equipment Rental Agency is a Business where a Customer can rent any medical equipment for their medical business.<br> Click any item in inventory to purchase!</p></div>
                </div>
