--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Guz's Medical</title>
+    <title>Title</title>
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="custom.css">
@@ -42,42 +42,52 @@
 
     <div id = "main">
    <div class="carousel_wrapper">
+
   <div class="carousel">
     <div class="slide one">
       <img src="beds.jpg" />
-        <a href="purchase.html">
+                <a href="purchase.html">
+
     </div>
     <div class="slide two">
       <img src="boot.jpg" />
-        <a href="purchase.html">
+                <a href="purchase.html">
+
     </div>
     <div class="slide three">
       <img src="crutches.jpg" />
-        <a href="purchase.html">
+                <a href="purchase.html">
+
     </div>
     <div class="slide four">
       <img src="mri.jpg" />
-        <a href="purchase.html">
+                <a href="purchase.html">
+
     </div>
     <div class="slide five">
       <img src="scooters.jpg" />
-        <a href="purchase.html">
+                <a href="purchase.html">
+
     </div>
     <div class="slide six">
       <img src="stretcher.jpg" />
-        <a href="purchase.html">
+                <a href="purchase.html">
+
     </div>
     <div class="slide seven">
       <img src="wheelchair.jpg" />
-        <a href="purchase.html">
+                <a href="purchase.html">
+
     </div>
     <div class="slide eight">
       <img src="surgical_tools.jpg" />
-        <a href="purchase.html">
+                <a href="purchase.html">
+
     </div>
     <div class="slide nine">
       <img src="x-ray.jpg" />
-        <a href="purchase.html">
+                <a href="purchase.html">
+
     </div>
   </div>
    </div>
